# FileCompressionTool

./: CMakeLists.txt  Makefile  README.md
src/: GUI.cpp  GUI.h  HuffmanCoding.cpp  HuffmanCoding.h  main.cpp
